--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "async": "^2.6.2",
+    "axios": "^0.18.0",
+    "cheerio": "^1.0.0-rc.3",
+    "promise-mysql": "^3.3.1",
     "request": "^2.88.0"
   }
 }
